# tdeni.github.io

./: .gitignore  README.md  entrypoint.py  pyproject.toml
.github/workflows/: static.yml
assets/: main.css
layout/: base.html.j2  footer.html.j2  header.html.j2  post.html.j2
pages/: index.html.j2
pages/posts/: index.html.j2
posts/: containerize-react-app.md
templates/: post.md
tools/: common.py  md.py  path.py  serve.py
www/: index.html
www/assets/: main.css
www/posts/: containerize-react-app.html  index.html
